--- a/src/app/file-upload-home/child_components/approvals/approvals.component.html
+++ b/src/app/file-upload-home/child_components/approvals/approvals.component.html
@@ -1,138 +1,282 @@
 <div class="row">
-    <div class="InnerTabBtn_container d-flex gap-3"  >
-        <div (click)="[openListofApprovals(),getApprovalsListDetails()]"  [ngClass]="listApprovalsActive==true?'btn_InnerTabactive':'btn_innerTab'">List of Approvals</div>
-        <div (click)="[openApprovalHistory(),getApprovalsListDetails()]" [ngClass]="listApprovalsActive==false?'btn_InnerTabactive':'btn_innerTab'">
-            Approvals History
-            <!-- <span class="counter">2</span> -->
-          </div>
+  <div class="InnerTabBtn_container d-flex gap-3">
+    <div
+      (click)="[openListofApprovals(), getApprovalsListDetails()]"
+      [ngClass]="
+        listApprovalsActive == true ? 'btn_InnerTabactive' : 'btn_innerTab'
+      "
+    >
+      List of Approvals
     </div>
-      <div *ngIf="listApprovalsActive==true;then listOfApprovals else  ApprovalHistory "></div>
-      <ng-template #listOfApprovals>
-        
-          <div class="ApproveListContainer">
-            <div class=" mt-2" *ngFor="let listOfApprovals of DataForListOfApprovals.reverse();let i=index" [ngClass]="{'approvalStatusCardExtended': openViewCard && i === selectedCardIndex, 'approvalStatusCard': !openViewCard || i !== selectedCardIndex}">
-              <div class="d-flex justify-content-between" style="width: 100%;height: 100%;">
-                <div class="col-2 d-flex justify-content-center align-items-center">
-                  <div class="imgContainer">
-                    <img src="assets/images/UserUploadStatusImage.png" alt="" height="95%" width="95%">
-                  </div>
-            
-                </div>
-                <div class="col-9">
-                  <strong class="d-flex flex-column gap-1 mt-2">
-                    <div>{{listOfApprovals?.file_name}}</div>
-                    <div>{{listOfApprovals?.file_context}}</div>
-                    <div>{{listOfApprovals?.sub_type}}</div>
-                  </strong>
-                  
-                  <div class="d-flex gap-2"><span><svg xmlns="http://www.w3.org/2000/svg" width="14" height="13" viewBox="0 0 14 13"
-                        fill="none">
-                        <path
-                          d="M6.993 0C3.129 0 0 2.91333 0 6.50296C0 10.0926 3.129 13.0059 6.993 13.0059C10.864 13.0059 14 10.0926 14 6.50296C14 2.91333 10.864 0 6.993 0ZM7 11.7053C3.906 11.7053 1.4 9.37727 1.4 6.50296C1.4 3.62865 3.906 1.30059 7 1.30059C10.094 1.30059 12.6 3.62865 12.6 6.50296C12.6 9.37727 10.094 11.7053 7 11.7053Z"
-                          fill="black" />
-                        <path d="M7.3498 3.25143H6.2998V7.1532L9.9748 9.20163L10.4998 8.40177L7.3498 6.66548V3.25143Z"
-                          fill="black" />
-                      </svg></span>
-                      <span>{{listOfApprovals?.upload_datetime|  date:'dd/MM/yyyy'}}</span>
-                  </div>
-                  <p class="FeedBackdescription">{{listOfApprovals?.feedback?.user_feedback}}</p>
-                 
-                </div>
-              </div>
-              <div *ngIf="openViewCard && i === selectedCardIndex;then ExtendedCard"></div>
-              <ng-template #ExtendedCard>
-
-                <div class="priviewUploadContentExtendedCard mb-2 m-2"  (click)="downLoadPriview(listOfApprovals,i)">
-        
-                  <div class="gray_container_mobile d-flex align-items-center gap-2">
-                      <div>
-                          <div class="fileIconForPdf">
-                              <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 36 36" fill="none">
-                                  <path d="M11.5 27H24.5V24H11.5V27ZM11.5 21H24.5V18H11.5V21ZM8.25 33C7.35625 33 6.59115 32.7062 5.95469 32.1187C5.31823 31.5312 5 30.825 5 30V6C5 5.175 5.31823 4.46875 5.95469 3.88125C6.59115 3.29375 7.35625 3 8.25 3H21.25L31 12V30C31 30.825 30.6818 31.5312 30.0453 32.1187C29.4089 32.7062 28.6438 33 27.75 33H8.25ZM19.625 13.5V6H8.25V30H27.75V13.5H19.625Z" fill="black"/>
-                              </svg>
-                          </div>
-                         
-                      </div>
-                      
-                      <div class="d-flex flex-column gap-1">
-                          <span><b id="fileNameDisplay">{{listOfApprovals?.file_name}}</b></span>
-                          <span><span >{{fileSize}}</span>|<span ></span>{{listOfApprovals?.file_type}}</span>
-                      </div>
-                  </div>
-                  <div class="d-flex justify-content-end">
-                      <span class="">Status</span>
-                  </div>
-              </div>
-              <div *ngIf="displayContent;then displayContentContainer"></div>
-              <ng-template #displayContentContainer>
-                <div class="col-12 d-flex justify-content-center p-3">
-                
-                 <video [src]="srcUrl" controls height="350px" width="100%" *ngIf='listOfApprovals?.file_type==="video"'></video>
-                 <audio [src]="srcUrl" controls height="350px" width="100%" *ngIf='listOfApprovals?.file_type==="audio"'></audio>
-                 <img [src]="srcUrl" alt=""  height="350px" width="100%" *ngIf='listOfApprovals?.file_type==="image"'>
-                 
-                </div>
-
-              </ng-template>
-
-
-              </ng-template>
-              <div class="col-12 align-self-end">
-                <button *ngIf="!openViewCard || i !== selectedCardIndex"  (click)="ViewCard(i)" class="btn btn-primary" style="width:100%;height: 3vh;display: flex;justify-content: center;align-items: center;gap:0.5em">
-                  View More<span>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12" fill="none">
-                      <path d="M3 4.5L6 7.5L9 4.5" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
-                  </span>
-                </button>
-                <button *ngIf="openViewCard && i === selectedCardIndex"  (click)="ViewLessCard(i)" class="btn btn-primary" style="width:100%;height: 3vh;display: flex;justify-content: center;align-items: center;gap:0.5em">
-                  View Less<span>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12" fill="none">
-                      <path d="M3 7.5L6 4.5L9 7.5" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
-                  </span>
-                </button>
-                
-              </div>
+    <div
+      (click)="[openApprovalHistory(), getApprovalsListDetails()]"
+      [ngClass]="
+        listApprovalsActive == false ? 'btn_InnerTabactive' : 'btn_innerTab'
+      "
+    >
+      Approvals History
+      <!-- <span class="counter">2</span> -->
+    </div>
+  </div>
+  <div
+    *ngIf="
+      listApprovalsActive == true;
+      then listOfApprovals;
+      else ApprovalHistory
+    "
+  ></div>
+  <ng-template #listOfApprovals>
+    <div class="ApproveListContainer">
+      <div
+        class="mt-2"
+        *ngFor="
+          let listOfApprovals of DataForListOfApprovals.reverse();
+          let i = index
+        "
+        [ngClass]="{
+          approvalStatusCardExtended: openViewCard && i === selectedCardIndex,
+          approvalStatusCard: !openViewCard || i !== selectedCardIndex
+        }"
+      >
+        <div
+          class="d-flex justify-content-between"
+          style="width: 100%; height: 100%"
+        >
+          <div class="col-2 d-flex justify-content-center align-items-center">
+            <div class="imgContainer">
+              <img
+                src="assets/images/UserUploadStatusImage.png"
+                alt=""
+                height="95%"
+                width="95%"
+              />
             </div>
           </div>
-        
-      </ng-template>
-      <ng-template #ApprovalHistory>
-        <div>
-          <div class="ApproveHistoryContainer">
-            <div class="ListOfApprovalHistoryCard mt-2" *ngFor="let listOfApprovals of DataForListOfApprovals">
-              <div class="col-2 d-flex justify-content-center align-items-center">
-                <div class="imgContainer">
-                  <img src="assets/images/UserUploadStatusImage.png" alt="" height="95%" width="95%">
-                </div>
-          
-              </div>
-              <div class="col-9">
-                <strong class="d-flex flex-column gap-1 mt-2">
-                  <div>{{listOfApprovals?.file_name}}</div>
-                  <div>{{listOfApprovals?.file_context}}</div>
-                  <div>{{listOfApprovals?.sub_type}}</div>
-                </strong>
-                
-                <div class="d-flex gap-2"><span><svg xmlns="http://www.w3.org/2000/svg" width="14" height="13" viewBox="0 0 14 13"
-                      fill="none">
-                      <path
-                        d="M6.993 0C3.129 0 0 2.91333 0 6.50296C0 10.0926 3.129 13.0059 6.993 13.0059C10.864 13.0059 14 10.0926 14 6.50296C14 2.91333 10.864 0 6.993 0ZM7 11.7053C3.906 11.7053 1.4 9.37727 1.4 6.50296C1.4 3.62865 3.906 1.30059 7 1.30059C10.094 1.30059 12.6 3.62865 12.6 6.50296C12.6 9.37727 10.094 11.7053 7 11.7053Z"
-                        fill="black" />
-                      <path d="M7.3498 3.25143H6.2998V7.1532L9.9748 9.20163L10.4998 8.40177L7.3498 6.66548V3.25143Z"
-                        fill="black" />
-                    </svg></span>
-                    <span>{{listOfApprovals?.upload_datetime|  date:'dd/MM/yyyy'}}</span>
-                </div>
-                <p class="FeedBackdescription">{{listOfApprovals?.feedback?.user_feedback}}</p>
-                <!-- <div class="feedBackEmojiContainer">
-                  <img src="assets/images/feedbackEmojis.jpeg" alt="emoji" height="100%" width="100%">
-                </div> -->
-              </div>
+          <div class="col-9">
+            <strong class="d-flex flex-column gap-1 mt-2">
+              <div>{{ listOfApprovals?.file_name }}</div>
+              <div>{{ listOfApprovals?.file_context }}</div>
+              <div>{{ listOfApprovals?.sub_type }}</div>
+            </strong>
+
+            <div class="d-flex gap-2">
+              <span
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="14"
+                  height="13"
+                  viewBox="0 0 14 13"
+                  fill="none"
+                >
+                  <path
+                    d="M6.993 0C3.129 0 0 2.91333 0 6.50296C0 10.0926 3.129 13.0059 6.993 13.0059C10.864 13.0059 14 10.0926 14 6.50296C14 2.91333 10.864 0 6.993 0ZM7 11.7053C3.906 11.7053 1.4 9.37727 1.4 6.50296C1.4 3.62865 3.906 1.30059 7 1.30059C10.094 1.30059 12.6 3.62865 12.6 6.50296C12.6 9.37727 10.094 11.7053 7 11.7053Z"
+                    fill="black"
+                  />
+                  <path
+                    d="M7.3498 3.25143H6.2998V7.1532L9.9748 9.20163L10.4998 8.40177L7.3498 6.66548V3.25143Z"
+                    fill="black"
+                  /></svg
+              ></span>
+              <span>{{
+                listOfApprovals?.upload_datetime | date : "dd/MM/yyyy"
+              }}</span>
             </div>
+            <p class="FeedBackdescription">
+              {{ listOfApprovals?.feedback?.user_feedback }}
+            </p>
           </div>
         </div>
-      </ng-template>
-</div>
+        <div
+          *ngIf="openViewCard && i === selectedCardIndex; then ExtendedCard"
+        ></div>
+        <ng-template #ExtendedCard>
+          <div
+            class="priviewUploadContentExtendedCard mb-2 m-2"
+            (click)="downLoadPriview(listOfApprovals, i)"
+          >
+            <div class="gray_container_mobile d-flex align-items-center gap-2">
+              <div>
+                <div class="fileIconForPdf">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="40"
+                    height="40"
+                    viewBox="0 0 36 36"
+                    fill="none"
+                  >
+                    <path
+                      d="M11.5 27H24.5V24H11.5V27ZM11.5 21H24.5V18H11.5V21ZM8.25 33C7.35625 33 6.59115 32.7062 5.95469 32.1187C5.31823 31.5312 5 30.825 5 30V6C5 5.175 5.31823 4.46875 5.95469 3.88125C6.59115 3.29375 7.35625 3 8.25 3H21.25L31 12V30C31 30.825 30.6818 31.5312 30.0453 32.1187C29.4089 32.7062 28.6438 33 27.75 33H8.25ZM19.625 13.5V6H8.25V30H27.75V13.5H19.625Z"
+                      fill="black"
+                    />
+                  </svg>
+                </div>
+              </div>
 
+              <div class="d-flex flex-column gap-1">
+                <span
+                  ><b id="fileNameDisplay">{{
+                    listOfApprovals?.file_name
+                  }}</b></span
+                >
+                <span
+                  ><span>{{ fileSize }}</span
+                  >|<span></span>{{ listOfApprovals?.file_type }}</span
+                >
+              </div>
+            </div>
+            <div class="d-flex justify-content-end">
+              <span class="">Status</span>
+            </div>
+          </div>
+          <div *ngIf="displayContent; then displayContentContainer"></div>
+          <ng-template #displayContentContainer>
+            <div class="col-12 d-flex justify-content-center p-3">
+              <video
+                [src]="srcUrl"
+                controls
+                height="350px"
+                width="100%"
+                *ngIf="listOfApprovals?.file_type === 'video'"
+              ></video>
+              <audio
+                [src]="srcUrl"
+                controls
+                height="350px"
+                width="100%"
+                *ngIf="listOfApprovals?.file_type === 'audio'"
+              ></audio>
+              <img
+                [src]="srcUrl"
+                alt=""
+                height="350px"
+                width="100%"
+                *ngIf="listOfApprovals?.file_type === 'image'"
+              />
+            </div>
+          </ng-template>
+        </ng-template>
+        <div class="col-12 align-self-end">
+          <button
+            *ngIf="!openViewCard || i !== selectedCardIndex"
+            (click)="ViewCard(i)"
+            class="btn btn-primary"
+            style="
+              width: 100%;
+              height: 3vh;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              gap: 0.5em;
+            "
+          >
+            View More<span>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="12"
+                height="12"
+                viewBox="0 0 12 12"
+                fill="none"
+              >
+                <path
+                  d="M3 4.5L6 7.5L9 4.5"
+                  stroke="white"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </span>
+          </button>
+          <button
+            *ngIf="openViewCard && i === selectedCardIndex"
+            (click)="ViewLessCard(i)"
+            class="btn btn-primary"
+            style="
+              width: 100%;
+              height: 3vh;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              gap: 0.5em;
+            "
+          >
+            View Less<span>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="12"
+                height="12"
+                viewBox="0 0 12 12"
+                fill="none"
+              >
+                <path
+                  d="M3 7.5L6 4.5L9 7.5"
+                  stroke="white"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </ng-template>
+  <ng-template #ApprovalHistory>
+    <div>
+      <div class="ApproveHistoryContainer">
+        <div
+          class="ListOfApprovalHistoryCard mt-2"
+          *ngFor="let listOfApprovals of DataForListOfApprovalsHistory"
+        >
+          <div class="col-2 d-flex justify-content-center align-items-center">
+            <div class="imgContainer">
+              <img
+                src="assets/images/UserUploadStatusImage.png"
+                alt=""
+                height="95%"
+                width="95%"
+              />
+            </div>
+          </div>
+          <div class="col-9">
+            <strong class="d-flex flex-column gap-1 mt-2">
+              <div>{{ listOfApprovals?.file_name }}</div>
+              <div>{{ listOfApprovals?.file_context }}</div>
+              <div>{{ listOfApprovals?.sub_type }}</div>
+            </strong>
+
+            <div class="d-flex gap-2">
+              <span
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="14"
+                  height="13"
+                  viewBox="0 0 14 13"
+                  fill="none"
+                >
+                  <path
+                    d="M6.993 0C3.129 0 0 2.91333 0 6.50296C0 10.0926 3.129 13.0059 6.993 13.0059C10.864 13.0059 14 10.0926 14 6.50296C14 2.91333 10.864 0 6.993 0ZM7 11.7053C3.906 11.7053 1.4 9.37727 1.4 6.50296C1.4 3.62865 3.906 1.30059 7 1.30059C10.094 1.30059 12.6 3.62865 12.6 6.50296C12.6 9.37727 10.094 11.7053 7 11.7053Z"
+                    fill="black"
+                  />
+                  <path
+                    d="M7.3498 3.25143H6.2998V7.1532L9.9748 9.20163L10.4998 8.40177L7.3498 6.66548V3.25143Z"
+                    fill="black"
+                  /></svg
+              ></span>
+              <span>{{
+                listOfApprovals?.upload_datetime | date : "dd/MM/yyyy"
+              }}</span>
+            </div>
+            <p class="FeedBackdescription">
+              {{ listOfApprovals?.feedback?.user_feedback }}
+            </p>
+            <!-- <div class="feedBackEmojiContainer">
+                  <img src="assets/images/feedbackEmojis.jpeg" alt="emoji" height="100%" width="100%">
+                </div> -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </ng-template>
+</div>
