--- a/src/app/file-upload-home/child_components/video-recorder/video-recorder.component.html
+++ b/src/app/file-upload-home/child_components/video-recorder/video-recorder.component.html
@@ -1,11 +1,26 @@
 <!-- app/video-recorder/video-recorder.component.html -->
 <div>
-  <video #videoElement class="w-100" muted autoplay></video>
+  <video
+    #videoElement
+    class="w-100"
+    [hidden]="hideVideo"
+    muted
+    autoplay
+  ></video>
   <br />
-  <button #recordButton (click)="startRecording()" class="btn btn-primary">
+  <button
+    #recordButton
+    [hidden]="hideVideo"
+    (click)="startRecording()"
+    class="btn btn-primary"
+  >
     Start Recording
   </button>
-  <button (click)="stopRecording()" class="btn btn-danger ms-2">
+  <button
+    [hidden]="hideVideo"
+    (click)="stopRecording()"
+    class="btn btn-danger ms-2"
+  >
     Stop Recording
   </button>
 </div>
