audio recorded upload

--- a/src/app/file-upload-home/child_components/video-recorder/video-recorder.component.html
+++ b/src/app/file-upload-home/child_components/video-recorder/video-recorder.component.html
@@ -10,6 +10,6 @@
   </button>
  
 </div>
-<button [hidden]="!hideVideo" (click)="uploadVideo()" class="btn btn-danger ms-2">
+<button [hidden]="!hideVideo" data-bs-dismiss="modal"   (click)="uploadVideo()" class="btn btn-danger ms-2">
   Upload 
   </button>
