--- a/src/app/file-upload-home/child_components/user-upload/user-upload.component.scss
+++ b/src/app/file-upload-home/child_components/user-upload/user-upload.component.scss
@@ -244,7 +244,12 @@ letter-spacing: 1.1px;
     width: 100%;
     overflow-y: auto;
 }
+.newUploadStatusContainer_mobile{
+    height: 73vh;
+    width: 100%;
+    overflow-y: auto;
 
+}
 
 
 ::ng-deep{
@@ -332,4 +337,77 @@ letter-spacing: 1.1px;
     align-items: center;
     // transform: scale(1.2);
 
+}
+.modal-title{
+    font-family: sans-serif;
+    font-weight: 600;
+    color:#000;
+    font-size: 1.2em;
+
+}
+.select-manager-mobile-btn{
+    border:1px solid gray;
+    color: gray;
+    text-align: left;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 2%;
+    
+}
+.selectManagerCard{
+    border: 1px solid gray;
+    border-radius: 5px;
+    // position: absolute;
+    width: 100%;
+    padding: 2%;
+    z-index: 2;
+
+
+}
+.mobile-searchbar {
+    /* Add this to make the container a flex container */
+    display: flex;
+    align-items: center;
+}
+
+.mobile-searchbar>input {
+    /* Remove 'display: flex' and 'align-items: center' since you're using it on the container */
+    width: 100%;
+    // padding: 0.5rem 0.6875rem;
+    gap: 5.75rem;
+    outline: 1px solid gray;
+    border-radius:5px;
+    background: #FFF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    // padding: 0.5rem 2rem 0.5rem 0.6875rem;
+    /* Increase left padding to make space for the icon */
+
+    // border-radius: 1.25rem;
+   
+    position: relative;
+    background-image: url('../../../../assets/images/zoom-out.svg');
+    background-repeat: no-repeat;
+    background-position: right 0.5rem center;
+    background-size: 1.7rem;
+}
+.managers_container{
+    width: 100%;
+    padding: 2%;
+    height: 200px;
+    overflow-y: auto;
+    padding: 2%;
+    .managersCard{
+        width: 100%;
+        border-radius: 4px;
+        border-bottom: 1px solid #E1E1E1;
+        background: #FFF;
+        height: 200px;
+        
+
+    }
 }
