--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,8 +15,8 @@
     padding: 0px;
     margin: 0px;
 }
-// html, body { height: 100%; }
-// body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body { height: 100%;}
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 ::-webkit-scrollbar {
     width: 5px;
   }
