--- a/src/app/file-upload-home/child_components/user-upload/user-upload.component.html
+++ b/src/app/file-upload-home/child_components/user-upload/user-upload.component.html
@@ -151,25 +151,34 @@
                   
                   <div class="dropdown-menu dropdown-menu-end">
                     <div class="attachmentContainer">
-                  
-                      <div class="AttachIcons">
-                        <a class="dropdown-item" onclick="document.getElementById('fileInput').click()">
+                      <div class="d-flex flex-column gap-1 align-items-center">
+                        <div class="AttachIcons">
+                          <a class="dropdown-item" onclick="document.getElementById('fileInput').click()">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                                <path d="M8 18H16V16H8V18ZM8 14H16V12H8V14ZM6 22C5.45 22 4.97917 21.8042 4.5875 21.4125C4.19583 21.0208 4 20.55 4 20V4C4 3.45 4.19583 2.97917 4.5875 2.5875C4.97917 2.19583 5.45 2 6 2H14L20 8V20C20 20.55 19.8042 21.0208 19.4125 21.4125C19.0208 21.8042 18.55 22 18 22H6ZM13 9V4H6V20H18V9H13Z"
-                                    fill="black" />
+                              <path
+                                d="M8 18H16V16H8V18ZM8 14H16V12H8V14ZM6 22C5.45 22 4.97917 21.8042 4.5875 21.4125C4.19583 21.0208 4 20.55 4 20V4C4 3.45 4.19583 2.97917 4.5875 2.5875C4.97917 2.19583 5.45 2 6 2H14L20 8V20C20 20.55 19.8042 21.0208 19.4125 21.4125C19.0208 21.8042 18.55 22 18 22H6ZM13 9V4H6V20H18V9H13Z"
+                                fill="black" />
                             </svg>
-                        </a>
-                        <input type="file" accept=".doc, .docx, application/pdf" id="fileInput" (change)="handleFileInput($event)">
-                    </div>
-                      <div class="AttachIcons" data-bs-toggle="modal" data-bs-target="#modalForCaptureImage" (click)="openCamera()" (mouseover)="openCameraModal()"><a class="dropdown-item">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                            <path
-                              d="M12 17.5C13.25 17.5 14.3125 17.0625 15.1875 16.1875C16.0625 15.3125 16.5 14.25 16.5 13C16.5 11.75 16.0625 10.6875 15.1875 9.8125C14.3125 8.9375 13.25 8.5 12 8.5C10.75 8.5 9.6875 8.9375 8.8125 9.8125C7.9375 10.6875 7.5 11.75 7.5 13C7.5 14.25 7.9375 15.3125 8.8125 16.1875C9.6875 17.0625 10.75 17.5 12 17.5ZM12 15.5C11.3 15.5 10.7083 15.2583 10.225 14.775C9.74167 14.2917 9.5 13.7 9.5 13C9.5 12.3 9.74167 11.7083 10.225 11.225C10.7083 10.7417 11.3 10.5 12 10.5C12.7 10.5 13.2917 10.7417 13.775 11.225C14.2583 11.7083 14.5 12.3 14.5 13C14.5 13.7 14.2583 14.2917 13.775 14.775C13.2917 15.2583 12.7 15.5 12 15.5ZM4 21C3.45 21 2.97917 20.8042 2.5875 20.4125C2.19583 20.0208 2 19.55 2 19V7C2 6.45 2.19583 5.97917 2.5875 5.5875C2.97917 5.19583 3.45 5 4 5H7.15L9 3H15L16.85 5H20C20.55 5 21.0208 5.19583 21.4125 5.5875C21.8042 5.97917 22 6.45 22 7V19C22 19.55 21.8042 20.0208 21.4125 20.4125C21.0208 20.8042 20.55 21 20 21H4ZM4 19H20V7H15.95L14.125 5H9.875L8.05 7H4V19Z"
-                              fill="black" />
-                          </svg>
-                        </a>
-                        
+                          </a>
+                          <input type="file" accept=".doc, .docx, application/pdf" id="fileInput" (change)="handleFileInput($event)">
+                      
+                        </div>
+                        <!-- <span>Document</span> -->
                       </div>
+                      <div class="d-flex flex-column gap-1 align-items-center">
+                        <div class="AttachIcons" data-bs-toggle="modal" data-bs-target="#modalForCaptureImage" (click)="openCamera()"
+                          (mouseover)="openCameraModal()"><a class="dropdown-item">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                              <path
+                                d="M12 17.5C13.25 17.5 14.3125 17.0625 15.1875 16.1875C16.0625 15.3125 16.5 14.25 16.5 13C16.5 11.75 16.0625 10.6875 15.1875 9.8125C14.3125 8.9375 13.25 8.5 12 8.5C10.75 8.5 9.6875 8.9375 8.8125 9.8125C7.9375 10.6875 7.5 11.75 7.5 13C7.5 14.25 7.9375 15.3125 8.8125 16.1875C9.6875 17.0625 10.75 17.5 12 17.5ZM12 15.5C11.3 15.5 10.7083 15.2583 10.225 14.775C9.74167 14.2917 9.5 13.7 9.5 13C9.5 12.3 9.74167 11.7083 10.225 11.225C10.7083 10.7417 11.3 10.5 12 10.5C12.7 10.5 13.2917 10.7417 13.775 11.225C14.2583 11.7083 14.5 12.3 14.5 13C14.5 13.7 14.2583 14.2917 13.775 14.775C13.2917 15.2583 12.7 15.5 12 15.5ZM4 21C3.45 21 2.97917 20.8042 2.5875 20.4125C2.19583 20.0208 2 19.55 2 19V7C2 6.45 2.19583 5.97917 2.5875 5.5875C2.97917 5.19583 3.45 5 4 5H7.15L9 3H15L16.85 5H20C20.55 5 21.0208 5.19583 21.4125 5.5875C21.8042 5.97917 22 6.45 22 7V19C22 19.55 21.8042 20.0208 21.4125 20.4125C21.0208 20.8042 20.55 21 20 21H4ZM4 19H20V7H15.95L14.125 5H9.875L8.05 7H4V19Z"
+                                fill="black" />
+                            </svg>
+                          </a>
+                      
+                        </div>
+                        <!-- <span>Camera</span> -->
+                      </div>
+                      
                       <div class="AttachIcons"><a class="dropdown-item" onclick="document.getElementById('SongInput').click()">
                           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                             <path
@@ -221,7 +230,7 @@
               <div class="d-flex justify-content-between" style="width: 100%;height: 100%;">
                 <div class="col-2 d-flex justify-content-center align-items-center">
                   <div class="imgContainer">
-                    <img src="assets/images/UserUploadStatusImage.png" alt="" height="95%" width="95%">
+                    <img src="assets/images/UserUploadStatusImage.png" alt="" height="95%" width="95%" >
                   </div>
             
                 </div>
@@ -246,46 +255,46 @@
                   
                   <div class="feedBackEmojiContainer"*ngIf="userUploadData?.feedback.rating!='1'">
                     <div class="emojis ">
-                      <img src="../../../../assets/images/Red.png" alt=""  height="100%" width="100%" >
+                      <img src="assets/images/Red.png" alt=""  height="100%" width="100%" >
                      <div style="width: 100%;border-top: 3px solid red;"></div>
                     </div>
                    <div class="activeEmojis"  *ngIf="userUploadData?.feedback.rating=='1'">
-                    <img src="../../../../assets/images/redActive.png" alt=""  height="100%" width="100%">
+                    <img src="assets/images/redActive.png" alt=""  height="100%" width="100%">
                     <div style="width: 100%;border-top: 3px solid red;"></div>
                    
                    </div>
                    <div class="emojis" *ngIf="userUploadData?.feedback.rating!='2'">
-                    <img src="../../../../assets/images/Orange.png" alt=""  height="100%" width="100%">
+                    <img src="assets/images/Orange.png" alt=""  height="100%" width="100%">
                     <div style="width: 100%;border-top: 3px solid orange;"></div>
                     
                    </div>
                    <div class="activeEmojis" *ngIf="userUploadData?.feedback.rating=='2'">
-                    <img src="../../../../assets/images/OrangeActive.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/OrangeActive.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid orange;"></div>
                     
                    </div>
                   <div class="emojis" *ngIf="userUploadData?.feedback.rating!='3'">
-                    <img src="../../../../assets/images/Yellow.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/Yellow.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid yellow;"></div>
                   </div>
                    <div class="activeEmojis" *ngIf="userUploadData?.feedback.rating=='3'">
-                    <img src="../../../../assets/images/YellowActive.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/YellowActive.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid yellow;"></div>
                    </div>
                    <div class="emojis" *ngIf="userUploadData?.feedback.rating!='4'">
-                    <img src="../../../../assets/images/Parot.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/Parot.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid lime;"></div>
                    </div>
                   <div class="activeEmojis" *ngIf="userUploadData?.feedback.rating=='4'">
-                    <img src="../../../../assets/images/ParotActive.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/ParotActive.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid lime;"></div>
                   </div>
                    <div class="emojis" *ngIf="userUploadData?.feedback.rating!='5'">
-                    <img src="../../../../assets/images/Green.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/Green.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid green;"></div>
                    </div>
                   <div class="activeEmojis" *ngIf="userUploadData?.feedback.rating=='5'">
-                    <img src="../../../../assets/images/GreenActive.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/GreenActive.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid green;"></div>
                   </div>
                   
@@ -294,8 +303,8 @@
               </div>
               <div *ngIf="openViewCard && i === selectedCardIndex;then ExtendedCard"></div>
                   <ng-template #ExtendedCard>
-
-                    <div class="priviewUploadContentExtendedCard mb-2 m-2"  (click)="downLoadPriview(userUploadData,i)">
+                    
+                    <div class=" priviewUploadContentExtendedCard mb-2 m-2"  (click)="downLoadPriview(userUploadData,i)">
             
                       <div class="gray_container_mobile d-flex align-items-center gap-2">
                           <div>
@@ -664,46 +673,46 @@
                   
                   <div class="feedBackEmojiContainerMobile"*ngIf="userUploadData?.feedback.rating!='1'">
                     <div class="emojis ">
-                      <img src="../../../../assets/images/Red.png" alt=""  height="100%" width="100%" >
+                      <img src="assets/images/Red.png" alt=""  height="100%" width="100%" >
                      <div style="width: 100%;border-top: 3px solid red;"></div>
                     </div>
                    <div class="activeEmojis"  *ngIf="userUploadData?.feedback.rating=='1'">
-                    <img src="../../../../assets/images/redActive.png" alt=""  height="100%" width="100%">
+                    <img src="assets/images/redActive.png" alt=""  height="100%" width="100%">
                     <div style="width: 100%;border-top: 3px solid red;"></div>
                    
                    </div>
                    <div class="emojis" *ngIf="userUploadData?.feedback.rating!='2'">
-                    <img src="../../../../assets/images/Orange.png" alt=""  height="100%" width="100%">
+                    <img src="assets/images/Orange.png" alt=""  height="100%" width="100%">
                     <div style="width: 100%;border-top: 3px solid orange;"></div>
                     
                    </div>
                    <div class="activeEmojis" *ngIf="userUploadData?.feedback.rating=='2'">
-                    <img src="../../../../assets/images/OrangeActive.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/OrangeActive.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid orange;"></div>
                     
                    </div>
                   <div class="emojis" *ngIf="userUploadData?.feedback.rating!='3'">
-                    <img src="../../../../assets/images/Yellow.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/Yellow.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid yellow;"></div>
                   </div>
                    <div class="activeEmojis" *ngIf="userUploadData?.feedback.rating=='3'">
-                    <img src="../../../../assets/images/YellowActive.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/YellowActive.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid yellow;"></div>
                    </div>
                    <div class="emojis" *ngIf="userUploadData?.feedback.rating!='4'">
-                    <img src="../../../../assets/images/Parot.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/Parot.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid lime;"></div>
                    </div>
                   <div class="activeEmojis" *ngIf="userUploadData?.feedback.rating=='4'">
-                    <img src="../../../../assets/images/ParotActive.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/ParotActive.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid lime;"></div>
                   </div>
                    <div class="emojis" *ngIf="userUploadData?.feedback.rating!='5'">
-                    <img src="../../../../assets/images/Green.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/Green.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid green;"></div>
                    </div>
                   <div class="activeEmojis" *ngIf="userUploadData?.feedback.rating=='5'">
-                    <img src="../../../../assets/images/GreenActive.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/GreenActive.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid green;"></div>
                   </div>
                   
@@ -805,8 +814,8 @@
         <div class="modal-footer">
          
           <button type="button" class="btn btn-primary" (click)="captureImage()" >Capture Image</button>
-          <button type="button" class="btn btn-secondary" (click)="cancelCapture()">Cancel</button>
-          <button type="button" class="btn btn-primary" data-bs-dismiss="modal"  (click)="uploadImage()">Upload Image</button>
+          <button type="button" class="btn btn-danger" (click)="cancelCapture()">Cancel</button>
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal"  (click)="uploadImage()" [disabled]="!capturedImageDataUrl">Upload Image</button>
         </div>
       </div>
     </div>
