--- a/src/app/file-upload-home/child_components/user-upload/user-upload.component.html
+++ b/src/app/file-upload-home/child_components/user-upload/user-upload.component.html
@@ -246,46 +246,46 @@
                   
                   <div class="feedBackEmojiContainer"*ngIf="userUploadData?.feedback.rating!='1'">
                     <div class="emojis ">
-                      <img src="../../../../assets/images/Red.png" alt=""  height="100%" width="100%" >
+                      <img src="assets/images/Red.png" alt=""  height="100%" width="100%" >
                      <div style="width: 100%;border-top: 3px solid red;"></div>
                     </div>
                    <div class="activeEmojis"  *ngIf="userUploadData?.feedback.rating=='1'">
-                    <img src="../../../../assets/images/redActive.png" alt=""  height="100%" width="100%">
+                    <img src="assets/images/redActive.png" alt=""  height="100%" width="100%">
                     <div style="width: 100%;border-top: 3px solid red;"></div>
                    
                    </div>
                    <div class="emojis" *ngIf="userUploadData?.feedback.rating!='2'">
-                    <img src="../../../../assets/images/Orange.png" alt=""  height="100%" width="100%">
+                    <img src="assets/images/Orange.png" alt=""  height="100%" width="100%">
                     <div style="width: 100%;border-top: 3px solid orange;"></div>
                     
                    </div>
                    <div class="activeEmojis" *ngIf="userUploadData?.feedback.rating=='2'">
-                    <img src="../../../../assets/images/OrangeActive.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/OrangeActive.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid orange;"></div>
                     
                    </div>
                   <div class="emojis" *ngIf="userUploadData?.feedback.rating!='3'">
-                    <img src="../../../../assets/images/Yellow.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/Yellow.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid yellow;"></div>
                   </div>
                    <div class="activeEmojis" *ngIf="userUploadData?.feedback.rating=='3'">
-                    <img src="../../../../assets/images/YellowActive.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/YellowActive.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid yellow;"></div>
                    </div>
                    <div class="emojis" *ngIf="userUploadData?.feedback.rating!='4'">
-                    <img src="../../../../assets/images/Parot.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/Parot.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid lime;"></div>
                    </div>
                   <div class="activeEmojis" *ngIf="userUploadData?.feedback.rating=='4'">
-                    <img src="../../../../assets/images/ParotActive.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/ParotActive.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid lime;"></div>
                   </div>
                    <div class="emojis" *ngIf="userUploadData?.feedback.rating!='5'">
-                    <img src="../../../../assets/images/Green.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/Green.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid green;"></div>
                    </div>
                   <div class="activeEmojis" *ngIf="userUploadData?.feedback.rating=='5'">
-                    <img src="../../../../assets/images/GreenActive.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/GreenActive.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid green;"></div>
                   </div>
                   
@@ -664,46 +664,46 @@
                   
                   <div class="feedBackEmojiContainerMobile"*ngIf="userUploadData?.feedback.rating!='1'">
                     <div class="emojis ">
-                      <img src="../../../../assets/images/Red.png" alt=""  height="100%" width="100%" >
+                      <img src="assets/images/Red.png" alt=""  height="100%" width="100%" >
                      <div style="width: 100%;border-top: 3px solid red;"></div>
                     </div>
                    <div class="activeEmojis"  *ngIf="userUploadData?.feedback.rating=='1'">
-                    <img src="../../../../assets/images/redActive.png" alt=""  height="100%" width="100%">
+                    <img src="assets/images/redActive.png" alt=""  height="100%" width="100%">
                     <div style="width: 100%;border-top: 3px solid red;"></div>
                    
                    </div>
                    <div class="emojis" *ngIf="userUploadData?.feedback.rating!='2'">
-                    <img src="../../../../assets/images/Orange.png" alt=""  height="100%" width="100%">
+                    <img src="assets/images/Orange.png" alt=""  height="100%" width="100%">
                     <div style="width: 100%;border-top: 3px solid orange;"></div>
                     
                    </div>
                    <div class="activeEmojis" *ngIf="userUploadData?.feedback.rating=='2'">
-                    <img src="../../../../assets/images/OrangeActive.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/OrangeActive.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid orange;"></div>
                     
                    </div>
                   <div class="emojis" *ngIf="userUploadData?.feedback.rating!='3'">
-                    <img src="../../../../assets/images/Yellow.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/Yellow.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid yellow;"></div>
                   </div>
                    <div class="activeEmojis" *ngIf="userUploadData?.feedback.rating=='3'">
-                    <img src="../../../../assets/images/YellowActive.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/YellowActive.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid yellow;"></div>
                    </div>
                    <div class="emojis" *ngIf="userUploadData?.feedback.rating!='4'">
-                    <img src="../../../../assets/images/Parot.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/Parot.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid lime;"></div>
                    </div>
                   <div class="activeEmojis" *ngIf="userUploadData?.feedback.rating=='4'">
-                    <img src="../../../../assets/images/ParotActive.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/ParotActive.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid lime;"></div>
                   </div>
                    <div class="emojis" *ngIf="userUploadData?.feedback.rating!='5'">
-                    <img src="../../../../assets/images/Green.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/Green.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid green;"></div>
                    </div>
                   <div class="activeEmojis" *ngIf="userUploadData?.feedback.rating=='5'">
-                    <img src="../../../../assets/images/GreenActive.png" alt=""  height="100%" width="100%" >
+                    <img src="assets/images/GreenActive.png" alt=""  height="100%" width="100%" >
                     <div style="width: 100%;border-top: 3px solid green;"></div>
                   </div>
                   
