--- a/src/app/file-upload-home/child_components/user-upload/user-upload.component.html
+++ b/src/app/file-upload-home/child_components/user-upload/user-upload.component.html
@@ -53,7 +53,7 @@
           <div *ngIf="openSelectManagerCard;then openSelectManagerCardMobile "></div>
           <ng-template #openSelectManagerCardMobile>
             <div class="selectManagerCardWeb">
-              <div class="d-flex flex-column">
+              <!-- <div class="d-flex flex-column">
                 <div class="d-flex justify-content-between gap-1">
                   <mat-form-field class="col-6">
                     <mat-label>Location</mat-label>
@@ -67,7 +67,7 @@
             
                     <mat-label>Department</mat-label>
                     <mat-select  >
-                      <mat-option value="1" >Angular Developer</mat-option>
+                      <mat-option value="1">Retail</mat-option>
                     </mat-select>
                   </mat-form-field>
                 </div>
@@ -76,19 +76,19 @@
             
                     <mat-label>Designation</mat-label>
                     <mat-select  >
-                      <mat-option value="1" >Developer</mat-option>
+                      <mat-option value="1" >District Manager</mat-option>
                      
                     </mat-select>
                   </mat-form-field>
                  
                 
-              </div>
+              </div> -->
               <div>
                 <div class="mt-1">
                   <div class="mobile-searchbar d-flex justify-content-center">
                       <input type="text" placeholder="Search by Program/Course name" [(ngModel)]="searchManger"  (click)="searchManagerFunction()">
                   </div>
-                  <div class="managers_container">
+                  <div class="managers_container" *ngIf="displayuser">
                     <div class="managersCard">
                       <div class="col-2 d-flex justify-content-start align-items-center">
                         <div class="managerImageContainer">
@@ -96,18 +96,16 @@
                         </div>
                       </div>
                       <div class="col-7">
-                        <div class="managerSLable">Name</div>
-                        <div class="managerSLable">Email ID</div>
-                        <div class="managerSLable">Employee ID</div>
+                        <div class="managerSLable">Name - R Sharma </div>
+                        <div class="managerSLable">Email ID - 'sharma@bata.com</div>
+                        <div class="managerSLable">Employee ID - S10942_BA</div>
                       </div>
-                      <div class=" col-2 addBtn align-self-start">
-                        Add +
+                      <div class=" col-2 addBtn align-self-start" (click)="addUSer()">
+                        {{Addbutton}}
                       </div>
+                      
                     </div>
-                    
-    
-    
-    
+
                   </div>
                  
     
@@ -428,15 +426,14 @@
           <div *ngIf="openSelectManagerCard;then openSelectManagerCardMobile "></div>
           <ng-template #openSelectManagerCardMobile>
             <div class="selectManagerCard">
-              <div class="d-flex flex-column">
+              <!-- <div class="d-flex flex-column">
                 <div class="d-flex justify-content-between gap-1">
                   <mat-form-field class="col-6">
             
                     <mat-label>Location</mat-label>
                     <mat-select  >
                       <mat-option value="1" >Pune</mat-option>
-                      <!-- <mat-option value="2">Option 2</mat-option>
-                      <mat-option value="3">Option 3</mat-option> -->
+              
                     </mat-select>
                   </mat-form-field>
                 
@@ -446,8 +443,7 @@
                     <mat-label>Department</mat-label>
                     <mat-select  >
                       <mat-option value="1" >Angular Developer</mat-option>
-                      <!-- <mat-option value="2">Option 2</mat-option>
-                      <mat-option value="3">Option 3</mat-option> -->
+                     
                     </mat-select>
                   </mat-form-field>
                 </div>
@@ -457,20 +453,34 @@
                     <mat-label>Designation</mat-label>
                     <mat-select  >
                       <mat-option value="1" >Developer</mat-option>
-                      <!-- <mat-option value="2">Option 2</mat-option>
-                      <mat-option value="3">Option 3</mat-option> -->
+                  
                     </mat-select>
                   </mat-form-field>
                  
                 
-              </div>
+              </div> -->
               <div>
                 <div class="mt-1">
                   <div class="mobile-searchbar d-flex justify-content-center">
                       <input type="text" placeholder="Search by Program/Course name" [(ngModel)]="searchManger"  (click)="searchManagerFunction()">
                   </div>
-                  <div class="managers_container">
+                  <div class="managers_container" *ngIf="displayuser">
                     <div class="managersCard">
+                      <div class="col-3 d-flex justify-content-center align-items-center">
+                        <div class="managerImageContainer">
+
+                        </div>
+                      </div>
+                      <div class="col-6">
+                        <div class="managerSLable">Name - R Sharma </div>
+                        <div class="managerSLable">Email ID - 'sharma@bata.com</div>
+                        <div class="managerSLable">Employee ID - S10942_BA</div>
+                      </div>
+                      <div class=" col-2 addBtn align-self-start"(click)="addUSer()">
+                        {{Addbutton}}
+                      </div>
+                    </div>
+                    <!-- <div class="managersCard">
                       <div class="col-3 d-flex justify-content-center align-items-center">
                         <div class="managerImageContainer">
 
@@ -514,22 +524,7 @@
                       <div class=" col-2 addBtn align-self-start">
                         Add +
                       </div>
-                    </div>
-                    <div class="managersCard">
-                      <div class="col-3 d-flex justify-content-center align-items-center">
-                        <div class="managerImageContainer">
-
-                        </div>
-                      </div>
-                      <div class="col-6">
-                        <div class="managerSLable">Name</div>
-                        <div class="managerSLable">Email ID</div>
-                        <div class="managerSLable">Employee ID</div>
-                      </div>
-                      <div class=" col-2 addBtn align-self-start">
-                        Add +
-                      </div>
-                    </div>
+                    </div> -->
   
   
   
