--- a/src/app/file-upload-home/child_components/approvals/approvals.component.scss
+++ b/src/app/file-upload-home/child_components/approvals/approvals.component.scss
@@ -49,7 +49,8 @@
     }
 
 }
-.approvalStatusCard{
+
+.approvalStatusCard {
     min-height: 17vh;
     width: 98%;
     margin-left: 1%;
@@ -60,26 +61,29 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     display: flex;
     flex-direction: column;
-    gap:1em;
+    gap: 1em;
 
 }
-.approvalStatusCardExtended{
+
+.approvalStatusCardExtended {
     //    min-height: 70vh;
     height: auto;
-        width: 98%;
-        margin-left: 1%;
-        align-self: center;
-        border-radius: 8px;
-        border: 1px solid #D3D3D3;
-        background: #FFF;
-        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        gap:1em;
-    
-    }
-.ListOfApprovalCard,.ListOfApprovalHistoryCard{
+    width: 98%;
+    margin-left: 1%;
+    align-self: center;
+    border-radius: 8px;
+    border: 1px solid #D3D3D3;
+    background: #FFF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 1em;
+
+}
+
+.ListOfApprovalCard,
+.ListOfApprovalHistoryCard {
     min-height: 17vh;
     width: 98%;
     margin-left: 1%;
@@ -89,10 +93,12 @@
     background: #FFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     display: flex;
-    gap:1em;
+    flex-direction: column;
+    gap: 1em;
 
 }
-.priviewUploadContentExtendedCard{
+
+.priviewUploadContentExtendedCard {
     border-radius: 7px;
     border: 1px solid #D3D3D3;
     background: #FFF;
@@ -103,16 +109,17 @@
 
 
 }
-.gray_container_mobile{
-min-height: 7vh;
-border-radius: 6px;
-background: #D3D3D3;
-width: 100%;
-padding: 2%;
+
+.gray_container_mobile {
+    min-height: 7vh;
+    border-radius: 6px;
+    background: #D3D3D3;
+    width: 100%;
+    padding: 2%;
 
 }
 
-.priviewUploadContentMobile{
+.priviewUploadContentMobile {
     border-radius: 7px;
     border: 1px solid #D3D3D3;
     background: #FFF;
@@ -122,55 +129,147 @@ padding: 2%;
     width: 100%;
 
 }
-.gray_container_mobile{
-min-height: 7vh;
-border-radius: 6px;
-background: #D3D3D3;
-width: 100%;
-padding: 2%;
+
+.gray_container_mobile {
+    min-height: 7vh;
+    border-radius: 6px;
+    background: #D3D3D3;
+    width: 100%;
+    padding: 2%;
 
 }
 
-.imgContainer{
+.imgContainer {
     border-radius: 7px;
-border: 0.5px solid #D8D8D8;
-display: flex;
-justify-content: center;
-align-items: center;
+    border: 0.5px solid #D8D8D8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 12vh;
+    width: 8vw;
 }
-.FeedBackdescription{
+
+.FeedBackdescription {
     color: #000;
     font-family: 'Lato', sans-serif;
-font-size: 12px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-letter-spacing: -0.24px;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.24px;
 
 }
-.feedBackEmojiContainer{
-    height: 10vh;
-    width: 50%;
+
+.feedBackEmojiContainer {
+    height: 5vh;
+    width: 95%;
+    display: flex;
+    justify-content: end;
+    gap: 0.5em;
+    margin-top: 2vh;
 
 }
-.ApproveListContainer,.ApproveHistoryContainer{
+
+.emojis {
+    height: 35px;
+    ;
+    // width: 100px;
+    display: flex;
+    gap: 0.5em;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.activeEmojis {
+    height: 35px;
+    ;
+    // width: 100px;
+    display: flex;
+    gap: 0.5em;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    // transform: scale(1.2);
+    img {
+        transform: scale(1.3);
+    }
+
+}
+
+.emojis>img:hover {
+    height: 35px;
+    // width: 100px;
+    display: flex;
+    padding: 3%;
+    gap: 0.5em;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    // border: 1px solid red;
+    border-radius: 50%;
+    border: 1px solid;
+    border-color: gray;
+    transform: scale(1.1);
+    cursor: pointer;
+}
+
+.successMessage {
+    color: #000;
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 39px;
+    /* 162.5% */
+    letter-spacing: 1.1px;
+    text-align: center;
+}
+
+
+.ApproveListContainer,
+.ApproveHistoryContainer {
     height: 57vh;
     width: 100%;
     overflow-y: auto;
 }
+
 @media screen and (min-width:1024.1px) {
-   
-    .mobile-view{
+
+    .mobile-view {
         display: none;
     }
 }
+
 @media screen and (min-width:270px) and (max-width:1024px) {
-    .web-view{
+    .web-view {
         display: none;
     }
-    .ApproveListContainer,.ApproveHistoryContainer{
+
+    .ApproveListContainer,
+    .ApproveHistoryContainer {
         height: 70vh;
         width: 100%;
         overflow-y: auto;
     }
+
+    .imgContainer {
+        border-radius: 7px;
+        border: 0.5px solid #D8D8D8;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 12vh;
+        width: 18vw;
+    }
+}
+
+.noDataConainer{
+    height: 100%;
+    width: 100%;
+    display: grid;
+    place-items: center;
 }
