--- a/src/app/file-upload-home/child_components/user-upload/user-upload.component.scss
+++ b/src/app/file-upload-home/child_components/user-upload/user-upload.component.scss
@@ -227,14 +227,14 @@ letter-spacing: -0.24px;
 
 }
 .feedBackEmojiContainer{
-    height: 13vh;
+    height: 5vh;
     width: 50%;
     display: flex;
     gap:0.5em
 
 }
 .feedBackEmojiContainerMobile{
-    height: 6vh;
+    height: 5vh;
     width: 100%;
     display: flex;
     gap:0.5em
@@ -265,7 +265,7 @@ letter-spacing: 1.1px;
     width: 100%;
     overflow-y: auto;
     overflow-x: hidden;
- 
+   
 }
 .newUploadStatusContainer_mobile{
     height: 73vh;
@@ -276,23 +276,31 @@ letter-spacing: 1.1px;
 }
 
 
-::ng-deep{
-    .webcam-wrapper, video.mirrored {
-        transform: scaleX(-1);
-        height: 100% !important;
-        width:100% !important;
-    }
-}
+
 
 @media screen and (min-width:1024.1px) {
    
     .mobile-view{
         display: none;
     }
+    ::ng-deep{
+        .webcam-wrapper, video.mirrored {
+            transform: scaleX(-1);
+            height: 100% !important;
+            width:100% !important;
+        }
+    }
 }
 @media screen and (min-width:270px) and (max-width:1024px) {
     .web-view{
         display: none;
+    }
+    ::ng-deep{
+        .webcam-wrapper, video.mirrored {
+            transform: scaleX(-1);
+            height: 100% !important;
+            width:100% !important;
+        }
     }
 }
 
@@ -360,6 +368,9 @@ letter-spacing: 1.1px;
     justify-content: center;
     align-items: center;
     // transform: scale(1.2);
+    img{
+        transform: scale(1.3);
+    }
 
 }
 .modal-title{
