--- a/src/app/file-upload-home/child_components/user-upload/user-upload.component.html
+++ b/src/app/file-upload-home/child_components/user-upload/user-upload.component.html
@@ -834,7 +834,7 @@
 
 
 <!-- Audio Record -->
-<!-- <div class="modal fade" id="exampleModalRecordAudio" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="exampleModalRecordAudio" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
           <div class="modal-header">
@@ -849,7 +849,7 @@
           </div>
       </div>
   </div>
-</div> -->
+</div>
 
 <!-- Submit  Btn PopUp -->
 
